async_pub_sub_macros/tests/fail/derive_subscriber_on_enum.rs
use async_pub_sub_macros::DeriveSubscriber;

#[derive(DeriveSubscriber)]
enum InvalidSubscriber {
    Toto,
}

fn main() {}
