async_pub_sub_macros/tests/fail/derive_subscriber_on_enum.stderr
error: DeriveSubscriber macro only supports structs
 --> tests/fail/derive_subscriber_on_enum.rs:4:1
  |
4 | / enum InvalidSubscriber {
5 | |     Toto,
6 | | }
  | |_^
